[metadata]
name = LA-ICP-MS-ChemMap
version = 2022.04.29
author = Germain Salvato Vallverdu, Lénaïck Sorimoutou, Sandra Mounicau, Brice Bouyssière
author_emeail = germain.vallverdu@univ-pau.fr
maintainer = Germain Salvato Vallverdu
maintainer_email = germain.vallverdu@univ-pau.fr
description = LA-ICP-MS - Data exploration and visualization of chemical cartography
long_description = file: README.md
long_description_content_type = text/x-markdown; charset=UTF-8
url = https://git.univ-pau.fr/gvallver/icpms-viz
project_urls =
    Bug Tracker = https://git.univ-pau.fr/gvallver/icpms-viz/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Chemistry

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    numpy >= 1.20
    pandas >= 1.4
    matplotlib >= 3.5
    scipy >= 1.7
    dash >= 2.3
    dash-bootstrap-components >= 1.1
    kaleido >= 0.2.1

python_requires = >=3.9

[options.packages.find]
where=src

[options.extras_require]
DEV = sphinx >=4.0.2; jupyter >=6.0.0; pytest >= 6.2

[options.entry_points]
console_scripts=
    run_app = icp_ms_map.run_app:main
