[metadata]
name = dash-stat-nba
version = 2022.06.28
author = Germain Salvato Vallverdu
author_email = germain.vallverdu@univ-pau.fr
maintainer = Germain Salvato Vallverdu
maintainer_email = germain.vallverdu@univ-pau.fr
description = Minimal working example of a dash app with entry point
long_description = file: README.md
long_description_content_type = text/x-markdown; charset=UTF-8
url = https://github.com/gVallverdu/dash-nba
project_urls =
    Bug Tracker = https://github.com/gVallverdu/dash-nba/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    pandas == 1.4.3
    dash == 2.5.1
    jupyter == 1.0.0
    plotly == 5.9.0

python_requires = >=3.9

[options.packages.find]
where=src

[options.extras_require]
DEV = pyling >=2.14.3; autopep8 >=1.6.0; 

[options.entry_points]
console_scripts=
    run_app = nba_stat_app.run_app:main
